# multi_agent_workflow

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  toDo
agent_openai/: agent.py
llm_auditor/: __init__.py  agent.py
llm_auditor/sub_agents/critic/: __init__.py
llm_auditor/sub_agents/reviser/: __init__.py  agent.py
multi_tool_agent/: agent.py
my_agent/: agent.py
travel_concierge/: __init__.py  agent.py  tracing.py
travel_concierge/sub_agents/post_trip/: __init__.py
