[project]
name = "BuesinessAgents"
version = "0.1.0"
requires-python = ">=3.13"

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehension
    "PL", # Pylint rules
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "RUF" # ruff specific rules
]
ignore = [
    "E501", # Ignore line length for long LLM prompts
    "PLR0913" # Allow agents to have many arguments if needed
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
